styles/portfolio.css
:root{
  --responsive-font-size-primary: min(1.8rem, max(0.5rem, 5vmin));
}

/* Explore page */
nav.explore-nav{
  position: sticky;
  top: 0;
  z-index: 10;
  padding-bottom:1rem;
  /* box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5); */
}

.intro-top-blue{
  margin: 0;
  padding: 0;
}

.top-blue {
  box-shadow: 0 0 0.3rem rgb(76, 66, 76, 0.5);
  /* clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px)); */
  background-color: var(--dark-blue-500);
  height: 28rem;
  width: 100%;
  position: relative;
  z-index: -100;
}

.top-blue h1{
  font-size: 2.6rem;
  color: var(--grey-100);
  margin: 0 auto;
  padding: 4rem;
  text-align: center;
  width: 60%;
}

/* Fade In for Media Icons */
.fade-in {
  animation: fadeIn ease 2s;
  -webkit-animation: fadeIn ease 2s;
  -moz-animation: fadeIn ease 2s;
  -o-animation: fadeIn ease 2s;
  -ms-animation: fadeIn ease 2s;
}

@keyframes fadeIn{
  0% {
    opacity:0;
    transform: translateY(100%);
  }
  100% {
    opacity:1;
  }
}
.icon-style-container{
  width: 100%;
  position: absolute;
  bottom: 4rem;
  z-index: 100;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-bottom:1rem;
}

.icon-style-container::after{
  content: '';
  position: absolute;
  bottom:0;
}

.icon-style-container svg {
  width: 175px;
  height: 90px;
}

.icon-fade-in {
  display: flex;
  justify-content: center;
  align-items: center;
}

.icon-fade {
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

.services section:not(:first-of-type) {
  margin-top: 4rem;
}

.services h2 {
  position: relative;
}

section h2::before{
  content: "";
  position: absolute;
  width: 20rem;
  height: 5px;
  transform-origin: bottom;
  background: var(--lt-blue-100);
  bottom: -8px;
  z-index: -1;
  transform: skew(-20deg) rotate(var(--rotate)) scaleX(var(--scaleX));
}

.video-example{
  position:relative;
  padding-top: 1.8rem;
}


/* Media Scroller */

.media-scroller{
  /* box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 3px 1px -2px rgba(0,0,0,.2); */
  --size-3: 1rem;
  --_spacer: var(--size-3);
  display: grid;
  gap: var(--_spacer);
  grid-auto-flow: column;
  /* Took out to be able to control width of each card */
  /* grid-auto-columns: 52%; */
  padding: var(--_spacer);
  overflow-x: auto;
  overscroll-behavior-inline: contain;
}

.media-scroller-title{
  margin: 1rem;
}

.media-scroller-header{
  width: 100%;
  display:flex;
  justify-content: end;
}

.media-scroller-icons{
  display: flex;
  gap: 0.5rem;
}

.media-scroller-icon {
  background-color: rgb(255, 255, 255);
  color: rgb(42, 42, 51);
}

.media-scroller-icon {
  cursor: pointer;
  margin: 0px;
  pointer-events: auto;
  font-family: "Inter", "Adjusted Arial", Tahoma, Geneva, sans-serif;
  font-size: 14px;
  height: 36px;
  width: 36px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  border: 1px solid #ADADB6;
  transition-property: background-color, border-color, color;
  transition-duration: 0.2s;
  transition-timing-function: ease;
}

.media-scroller-icon:hover{
  background-color: rgb(238,238,240);
  border-color:rgb(173,173,182);
  color: rgb(42,42,51);
}

svg.chevron-right{
  height: 16px;
  width: 16px;
  rotate: -90deg;
}

svg.chevron-left{
  height: 16px;
  width: 16px;
  rotate: 90deg;
}

.media-element{
  --shadow-color: 220 40% 2%;
  --shadow-strength: 10%;
  display: grid;
  grid-template-rows: min-content;
  /* grid-auto-columns: 100%; */
  /* gap: var(--_spacer); */
  margin: 0 0 0.5rem 0;
  padding: 0 0 1.7rem 0;
  background: var(--dark-blue-500);
  color: var(--grey-100);
  border-radius: 24px;
  box-shadow: 0 3px 5px -2px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 3%)),0 7px 14px -5px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 5%));
  max-width: 615px;
  min-width: 615px;
  z-index:10;
}

.media-element > img {
  inline-size: 100%;
  aspect-ratio: 16 /9;
  object-fit: cover;
}

.iframe-wrapper {
  position: relative;
  aspect-ratio: 16 / 9;
  object-fit:contain;

  &::before {    
    content: "";
    position: absolute;
    inset: 10px;
    z-index: -1;
    background: #000;
    filter: blur(10px);
    opacity: .50;
  }
  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    clip-path: inset(0% 0% 0% 0% round 10px);
  }
}

.media-element .title{
  padding: 0.8rem 2rem 0.2rem;
  margin: 0;
  font-weight: 500;
  letter-spacing: 0.5px;
  font-size: 1.4rem;
}

.media-element .sub-title{
  font-size: 1.15rem;
  padding: 0 0 0 2.5rem;
  margin: 0;
}

.snaps-inline{
  scroll-snap-type: inline mandatory;
  scroll-padding-inline: var(--_spacer, 1rem);
}

.snaps-inline > * {
  scroll-snap-align: start;
}


@media (prefers-reduced-motion: no-preference) {
  scroll-behavior: smooth;
}

@media (prefers-reduced-motion: no-preference) {
  transition: outline-offset .25s ease;
}

/* End Media Scroller */

.section-intro-content{
  width:85%;
  margin: 0 auto;
}

.design-section{
  padding-top: 1.5rem;
}

.design-section h2::before{
  width: 9rem;
}

/* Before and After Examples  */
.before-after-container{
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.before-section, .after-section{
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 500px;
}

.before-section img, .after-section img{
  width: 100%;
  height: auto;
}


.before-section-horizontal, .after-section-horizontal{
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 500px;
}

.before-section-horizontal img, .after-section-horizontal img{
  width:100%;
  height: auto;
  display:block;
}


h3.before-title{
  color: var(--red);
  font-size: 1.563rem;
}


h3.after-title{
  color: var(--green);
  font-size: 1.563rem;
}


/* 
.before-image, .after-image{
  width: 100%;
  /* height: auto; */
  /* max-width: 85%; */
/* } */

/* TODO:adjust size and padding */

.divider{
  display: inline-flex;
  align-self: center;
  border-left: 2px solid var(--grey-200);
  height: 550px;
  margin: 0 1rem;
}

.divider-horizontal{
  display: inline-flex;
  align-self: center;
  border-left: 2px solid var(--grey-200);
  height: 350px;
  margin: 0 1rem;
}


/* TODO: Media Queries for Explore page */

@media only screen and (max-width: 815px) {
  /* For mobile phones: */
  .top-blue{
    height: 30rem;
  }
  .top-blue h1{
    padding-top: 7rem;
    font-size: 2rem;
    width: 100%;
  }
  .icon-style-container svg {
    width: 100px;
    height: 50px;
  }
  .video-section h2 {
    font-size: 1.953rem;
  }
  .video-section h3 {
    font-size: 1.563rem;
  }
  .video-section h2::before {
    width: 16rem;
  }

}

/* Services page styling end */

